updated frontend home page, updated the design of scenery backend